deployments/aws/cloudformation/instances.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 instances configuration

Parameters:
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
  IAMInstanceProfile:
    Type: String
  EBS1Id:
    Type: String
  ElasticIP1:
    Type: String
  ElasticIP2:
    Type: String

Resources:
  EC2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c55b159cbfafe1f0  # Amazon Linux 2 AMI ID
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref IAMInstanceProfile
      SecurityGroups:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y ansible git
          mkdir -p /ansible
          # Mount EBS volume
          mkfs -t xfs /dev/xvdf
          mkdir -p /data
          mount /dev/xvdf /data
          echo '/dev/xvdf /data xfs defaults,nofail 0 2' >> /etc/fstab

  EC2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c55b159cbfafe1f0
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref IAMInstanceProfile
      SecurityGroups:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y ansible git

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and application ports
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  EBSAttachment:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: /dev/xvdf
      InstanceId: !Ref EC2Instance1
      VolumeId: !Ref EBS1Id

  EIP1Association:
    Type: AWS::EC2::EIPAssociation
    Properties:
      EIP: !Ref ElasticIP1
      InstanceId: !Ref EC2Instance1

  EIP2Association:
    Type: AWS::EC2::EIPAssociation
    Properties:
      EIP: !Ref ElasticIP2
      InstanceId: !Ref EC2Instance2
